cambie los nombre de algunas ropa

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="producto">
-        <img src="pantalon de mujer/pantalos4.jpeg" alt="Pantalón4">
+        <img src="pantalon de mujer/pantalon4.jpeg" alt="Pantalón4">
         <h3>Marca: Pantalones Vaqueros</h3>
         <p>Precio: 580 LPS</p>
     </div>
@@ -109,14 +109,14 @@
             <div class="seccion-productos">
         <!-- Pantalón 1 -->
         <div class="producto">
-            <img src="pantalon de hombre/pantalon1.jpg" alt="Pantalón GUNS AND BLUES">
+            <img src="Pantalon de hombre/pantalon1.jpg" alt="Pantalón GUNS AND BLUES">
             <h3>GUNS AND BLUES</h3>
             <p>Precio: 600 LPS</p>
         </div>
 
         <!-- Pantalón 2 -->
         <div class="producto">
-            <img src="pantalon de hombre/pantalon2.jpg" alt="Pantalón INTERBIEW JEANS">
+            <img src="Pantalon de hombre/pantalon2.jpg" alt="Pantalón INTERBIEW JEANS">
             <h3>INTERBIEW JEANS</h3>
             <p>Precio: 550 LPS</p>
         </div>
