si yo lo quise cambiar el logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <!-- Contenedor para el logo y el nombre -->
     <div class="header">
-        <img src="logo.jpg" alt="Logo de STORE CHIC" class="logo">
+        <img src="logo1.jpg" alt="Logo de STORE CHIC" class="logo">
         <div class="nombre-tienda">STORE CHIC</div>
     </div>
 
