--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img src="pantalon de mujer/pantalon1.jpeg" alt="Pantalón1">
         <h3>Marca: Guess Jeans</h3>
         <p>Precio: 530 LPS</p> 
-        <a href="/path/to/comprar.php?producto=<?php echo $row['id']; ?>&precio=530" class="btn btn-primary btn-comprar">Comprar</a>
+        <a href="comprar.php?producto=<?php echo $row['id']; ?>&precio=530" class="btn btn-primary btn-comprar">Comprar</a>
     </div>
 
     <div class="producto">
