--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <div class="card-top-right">
   <p class="heading">“Tu estilo, tu elección.”</p>
   <p>“Sé la versión más elegante de ti mismo.”</p>
-  <p>ELEGANT</p>
+  <p>ELEGANT</p> 
+    
 </div>
 
 
@@ -68,7 +69,25 @@
  
     <li><a href="#zapatos">Zapatos</a></li>
 </ul>
-        </nav>
+        </nav> 
+        <script>
+    // Enviar solicitud AJAX para guardar la compra
+    function comprar(producto_id, precio) {
+        const url = '/comprar.php'; // Actualiza esta ruta con la real de tu servidor web
+        const data = { producto_id: producto_id, precio: precio };
+
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        }).then(() => {
+            console.log('Compra registrada exitosamente.');
+            alert("¡Registro Guardado! Gracias por tu compra.");
+        });
+    }
+</script>
 
        <!-- Secciones de productos -->
 <section id="pantalones-mujer">
@@ -78,8 +97,7 @@
         <img src="pantalon de mujer/pantalon1.jpeg" alt="Pantalón1">
         <h3>Marca: Guess Jeans</h3>
         <p>Precio: 530 LPS</p> 
-        <a href="comprar.php?producto=<?php echo $row['id']; ?>&precio=530" class="btn btn-primary btn-comprar">Comprar</a>
-    </div>
+       <button onclick="location.href='comprar.php?producto=<?php echo $row['id']; ?>&precio=530';" class="btn btn-primary btn-comprar">Comprar</button>
 
     <div class="producto">
         <img src="pantalon de mujer/pantalon2.jpeg" alt="Pantalón2">
