hice un gran cambio

--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
         <img src="pantalon de mujer/pantalon1.jpeg" alt="Pantalón1">
         <h3>Marca: Guess Jeans</h3>
         <p>Precio: 530 LPS</p> 
-        <form method="POST" id="formulario-comprar-pantalon-1">
-        <input type="number" name="cantidad" min="1" max="10" value="1">
-        <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-    </form>
+        <!-- Formulario de compra -->
+<form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
+    <input type="hidden" name="productoId" value="1"> <!-- Asegúrate de que el valor sea el ID del producto -->
+    <input type="number" name="cantidad" min="1" max="10" value="1">
+    <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
+</form>
+
     <div class="producto">
         <img src="pantalon de mujer/pantalon2.jpeg" alt="Pantalón2">
         <h3>Marca: Magenda</h3>
