--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
          <a href="/path/to/comprar.php?producto=<?php echo $row['id']; ?>&precio=1900" class="btn btn-primary btn-comprar">Comprar</a> 
          <script>
     function comprar(producto_id, precio) {
-        const url = 'https://ejemplo.com/comprar.php'; // Actualiza esta ruta con la real de tu servidor web
+        const url = ''http:localhost/mi_tienda/comprar.php'; // Actualiza esta ruta con la real de tu servidor web
         const data = { producto_id: producto_id, precio: precio };
 
         fetch(url, {
