--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <img src="zapatos/img9.jpg" alt="Imagen 8">
         <p>Precio: 400 LPS</p>
         <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="18"> <!-- ID único del producto -->
+            <input type="hidden" name="productoId" value="18">
             <input type="number" name="cantidad" min="1" max="10" value="1">
             <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
         </form>
