--- a/carrito.html
+++ b/carrito.html
@@ -24,15 +24,15 @@
                     <th>Producto</th>
                     <th>Cantidad</th>
                     <th>Precio unitario</th>
-                    <th>Total</th>
+                    <th>Total</th> 
+                      <th>Acciones</th>
                 </tr>
             </thead>
             <tbody id="cart-items"></tbody>
         </table>
 
         <div class="total-price">
-            <span>Total del carrito:</span>
-            <span id="total-price">$0.00</span>
+            <div id="total-price" class="total-price">Total: 0.00 LPS</div>
         </div>
 
         <div class="buttons">
@@ -53,7 +53,8 @@
         <!-- Información de envío -->
         <div class="shipping-info">
             <h3>Información de envío:</h3>
-            <input type="text" id="shipping-estimation" readonly>
+            <input type="text" id="shipping-estimation" readonly> 
+              <label for="informacion envio">¡EN 3 DIAS SU PEDIDO LLEGARA¡:</label>
         </div>
 
     </div>
