--- a/carrito.html
+++ b/carrito.html
@@ -32,12 +32,12 @@
         </table>
 
         <div class="total-price">
-            <div id="total-price" class="total-price">Total: 0.00 LPS</div>
+            <div id="total-price-display">Total: 0.00 LPS</div>
         </div>
-
-        <div class="buttons">
+        
+       <div class="buttons">
             <button class="buy-btn" onclick="finalizarCompra()">Finalizar compra</button>
-            <a href="#" class="checkout-btn">Proceder al pago</a>
+           
         </div>
 
         <!-- Sección de información de contacto -->
@@ -54,7 +54,7 @@
         <div class="shipping-info">
             <h3>Información de envío:</h3>
             <input type="text" id="shipping-estimation" readonly> 
-              <label for="informacion envio">¡EN 3 DIAS SU PEDIDO LLEGARA¡:</label>
+            <label for="shipping-estimation">¡EN 3 DIAS SU PEDIDO LLEGARA¡:</label>
         </div>
 
     </div>
