--- a/carrito.html
+++ b/carrito.html
@@ -10,9 +10,9 @@
 <body> 
     <!-- Agregar botón para agregar producto al carrito -->
     <div class="product-buttons">
-        <button onclick="addToCart(1)">Agregar Producto 1 al carrito</button>
+        <button onclick="addToCart(1, 'Guess Jeans', 530)">Agregar Producto 1 al carrito</button>
         <!-- Puedes agregar más botones para otros productos -->
-        <!-- <button onclick="addToCart(2)">Agregar Producto 2 al carrito</button> -->
+        <!-- <button onclick="addToCart(2, 'Magenda', 550)">Agregar Producto 2 al carrito</button> -->
     </div>
 
     <div class="container">
@@ -25,7 +25,7 @@
                     <th>Cantidad</th>
                     <th>Precio unitario</th>
                     <th>Total</th> 
-                      <th>Acciones</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody id="cart-items"></tbody>
@@ -35,9 +35,8 @@
             <div id="total-price-display">Total: 0.00 LPS</div>
         </div>
         
-       <div class="buttons">
+        <div class="buttons">
             <button class="buy-btn" onclick="finalizarCompra()">Finalizar compra</button>
-           
         </div>
 
         <!-- Sección de información de contacto -->
@@ -62,3 +61,4 @@
     <script src="../carrito.js"></script> <!-- Enlazar a tu archivo JavaScript -->
 </body>
 </html>
+
