--- a/carrito.html
+++ b/carrito.html
@@ -13,9 +13,10 @@
 </div>
     <!-- Agregar botón para agregar producto al carrito -->
  <div class="product-buttons">
-    <button onclick="addToCart(1, 'Guess Jeans', 530)">Agregar Guess Jeans al carrito</button>
-    <button onclick="addToCart(2, 'Magenda', 550)">Agregar Magenda al carrito</button>
-    <!-- Agrega más botones para otros productos según sea necesario -->
+    <button onclick="addToCart(1, 'Guess Jeans', 530)">Agregar al carrito</button>
+<button onclick="addToCart(2, 'Magenda', 550)">Agregar al carrito</button>
+<!-- Agrega más botones según sea necesario -->
+
 </div>
 
 
