--- a/index.html
+++ b/index.html
@@ -242,81 +242,49 @@
     <div class="producto">
         <img src="sitio de niño/img3.jfif" alt="Imagen 3">
         <p>Precio: 500 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="3"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img4.webp" alt="Imagen 4">
         <p>Precio: 470 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="4"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img5.jpeg" alt="Imagen 5">
         <p>Precio: 350 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="5"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img6.webp" alt="Imagen 6">
         <p>Precio: 380 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="6"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img7.webp" alt="Imagen 7">
         <p>Precio: 400 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="7"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img8.jfif" alt="Imagen 8">
         <p>Precio: 450 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="8"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img9.jpg" alt="Imagen 9">
         <p>Precio: 400 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="9"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="sitio de niño/img10.jfif" alt="Imagen 10">
         <p>Precio: 480 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar esta prenda?');">
-            <input type="hidden" name="productoId" value="10"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 </section>
 
@@ -326,91 +294,55 @@
     <div class="producto">
         <img src="zapatos/img1.jpg" alt="Imagen 1">
         <p>Precio: 450 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="11"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img2.jpg" alt="Imagen 2">
         <p>Precio: 350 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="12"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+         <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img3.jpg" alt="Imagen 3">
         <p>Precio: 400 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="13"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+         <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img5.jpg" alt="Imagen 4">
         <p>Precio: 430 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="14"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img6.jpg" alt="Imagen 5">
         <p>Precio: 550 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="15"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img7.jpg" alt="Imagen 6">
         <p>Precio: 470 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="16"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img8.jpg" alt="Imagen 7">
         <p>Precio: 380 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="17"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img9.jpg" alt="Imagen 8">
         <p>Precio: 400 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="18">
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+       <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 
     <div class="producto">
         <img src="zapatos/img10.jpg" alt="Imagen 9">
         <p>Precio: 480 LPS</p>
-        <form method="POST" action="comprar.php" onsubmit="return confirm('¿Estás seguro de que quieres comprar este zapato?');">
-            <input type="hidden" name="productoId" value="19"> <!-- ID único del producto -->
-            <input type="number" name="cantidad" min="1" max="10" value="1">
-            <button type="submit" class="btn btn-primary btn-comprar">Comprar</button>
-        </form>
+        <button onclick="addToCart(7, 'INTERBIEW JEANS', 550)">Agregar al carrito</button>
     </div>
 </section>
 
